Fix footer links alignment

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ article footer nav {
   justify-content: space-between;
 }
 
+article footer span:last-child {
+  text-align: right;
+}
+
 h1 {
   font-weight: 400;
 }
